Added map.json so tileset generator can be mapped to a common set of elements

--- a/back-octo-adventure/back-octo-adventure.csproj
+++ b/back-octo-adventure/back-octo-adventure.csproj
@@ -5,5 +5,7 @@
     <RootNamespace>back_octo_adventure</RootNamespace>
   </PropertyGroup>
 
+  <ProjectExtensions><VisualStudio><UserProperties /></VisualStudio></ProjectExtensions>
+
 
 </Project>
