--- a/back-octo-adventure/back-octo-adventure.csproj
+++ b/back-octo-adventure/back-octo-adventure.csproj
@@ -5,10 +5,7 @@
     <RootNamespace>back_octo_adventure</RootNamespace>
   </PropertyGroup>
 
-  <ItemGroup>
-    <Folder Include="Models\" />
-    <Folder Include="Services\" />
-  </ItemGroup>
+  <ProjectExtensions><VisualStudio><UserProperties /></VisualStudio></ProjectExtensions>
 
 
 </Project>
