Added base class for DbContext. WIP

--- a/back-octo-adventure/appsettings.json
+++ b/back-octo-adventure/appsettings.json
@@ -6,5 +6,8 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
+  "ConnectionStrings": {
+    "SQLServerURI": "Server=Server\\Server;Database=myDataBase;User Id=myUsername;Password=myPassword;"
+  }
   "AllowedHosts": "*"
 }
