--- a/back-octo-adventure/back-octo-adventure.csproj
+++ b/back-octo-adventure/back-octo-adventure.csproj
@@ -7,5 +7,21 @@
 
   <ProjectExtensions><VisualStudio><UserProperties /></VisualStudio></ProjectExtensions>
 
+  <ItemGroup>
+    <None Remove="appsettings.json.delete" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Content Include="appsettings.json.delete" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="5.0.0" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="5.0.0">
+      <PrivateAssets>all</PrivateAssets>
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+    </PackageReference>
+  </ItemGroup>
+
 
 </Project>
